# RAGLocal

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: settings.example.yaml
docs/: architecture.md  networking-ollama-lan.md  operations.md  roadmap.md  security.md
scripts/: bootstrap.sh  ingest.sh  query.sh  ui.sh
src/rag_local/: __init__.py  cli.py  config.py  logging_utils.py  rag_service.py
src/rag_local/clients/: ollama_client.py
src/rag_local/embeddings/: embedding_service.py
src/rag_local/generate/: generator.py
src/rag_local/ingest/: chunker.py  loader.py  pipeline.py
src/rag_local/retrieve/: retriever.py
src/rag_local/ui/: __init__.py  app.py  utils.py
src/rag_local/vectorstores/: faiss_store.py
tests/: test_chunker.py  test_prompt_builder.py  test_ui_utils.py
